bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:3: error: '(' expected but identifier found.
  if a==b:
     ^